# global-exchange

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  main.py  pyproject.toml  run.ps1
Prompts/: chat_ia (1).md  django_roles_permissions_guide.md
auth/: admin.py  apps.py  forms.py  middleware.py  models.py  services.py  tests.py  urls.py  views.py
clientes/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py  widgets.py
configuracion/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
docs/: Makefile  make.bat
facturacion_service/: .env.example  __init__.py  factura_utils.py  inutilizar.py  invoice_generator.py
global_exchange/: settings.py  urls.py
grupos/: __init__.py  admin.py  apps.py  backends.py  context_processors.py  decorators.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
metodo_cobro/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py  widgets.py
metodo_pago/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  widgets.py
monedas/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
notificaciones/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
pagos/: forms.py  models.py  services.py  tests.py  urls.py  views.py
roles/: context_processors.py  decorators.py  forms.py  guia.txt  html_views.py  mixins.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
scripts/: asignar_permisos_reportes.py  check_admin_group.py  create_clientes_test.py  create_currencies_test.py  create_grupos_usuarios_test.py  create_historical_rates.py  create_metodos_cobro_test.py  create_metodos_pago_test.py  create_stripe_method.py  create_tausers_test.py  create_tipos_cliente_test.py  create_transacciones_test.py  create_user.bat  create_user.sh  entrypoint.sh  get-stripe-webhook-secret.sh  init_contador_factura.py  setup_esi.py  setup_esi_from_env.py  test_stock_system.py
simulador-pasarela-pago/: .env  INTEGRATION.md  (+9 more)
(+254 files in other folders)
